--- a/estilos.css
+++ b/estilos.css
@@ -15,7 +15,8 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 50px;
     
 }
 
@@ -24,6 +25,7 @@ body{
     padding: 50px;
     background-color: bisque;
     margin-bottom: 20px;
+    margin-right: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
